# Bayesian_Linear_Regression

./: .gitignore  AGENTS.md  Bayesian Linear Regression.Rmd  Bayesian-Linear-Regression.html  README.md  pyproject.toml  requirements.txt
docs/: artifacts.md  dataset_note.md  original_report_summary.md  part1_bayesian_regression_foundations.md  part2_bayesian_hallucination_risk_modeling.md  part3_multimodal_hallucination_uncertainty.md  part4_bayesian_abstention_decision_rules.md  research_questions.md  roadmap.md
experiments/: run_boston_benchmark.py  run_repeated_split_comparison.py
part0_reproductions/: README.md
part0_reproductions/01_uncertainty_signals/: ENVIRONMENT.md  README.md  REPORT.md
part0_reproductions/02_bayesian_risk_and_decision_theory/: README.md
part0_reproductions/03_calibration_and_interaction/: README.md
part0_reproductions/04_rag_and_heterogeneous_evidence/: README.md
part0_reproductions/05_multimodal_risk_decomposition/: README.md
part0_reproductions/06_agentic_and_multiagent_uq/: README.md
reports/tables/: bias_variance.csv  legacy_feature_sensitivity.csv  mcmc_diagnostics.csv  metrics.json  model_comparison.csv  posterior_coefficients.csv  repeated_split_pairwise.csv  repeated_split_raw.csv  repeated_split_summary.csv  tau_cv_folds.csv  tau_cv_summary.csv  test_predictions.csv  training_size_raw.csv  training_size_summary.csv
scripts/: check_markdown_assets.py  render_equation_assets.py
src/bayeslinreg/: __init__.py  data.py  diagnostics.py  metrics.py  (+2 more)
tests/: test_bayeslinreg.py  test_diagnostics.py  test_repeated_split.py
(+6 files in other folders)
